--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,23 @@
 /blib/
+*.bs
 /.build/
 _build/
-cover_db/
-inc/
 Build
 !Build/
 Build.bat
+cover_db/
+*dbh*
+/_eumm/
+inc/
 .last_cover_stats
 /Makefile
 /Makefile.old
+MANIFEST
 /MANIFEST.bak
 /META.yml
 /META.json
 /MYMETA.*
 nytprof.out
-/pm_to_blib
 *.o
-*.bs
-/_eumm/
+/pm_to_blib
+*.tar.gz
