--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Build.bat
 cover_db/
 *dbh*
 /_eumm/
+*.html
 inc/
 .last_cover_stats
 /Makefile
@@ -21,3 +22,4 @@ nytprof.out
 *.o
 /pm_to_blib
 *.tar.gz
+*test.pl
